--- a/week4-neural-networks/03-neural-networks.ipynb
+++ b/week4-neural-networks/03-neural-networks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 3: Neural Networks\n",
+    "# Week 4: Neural Networks\n",
     "\n",
     "## Neural Network"
    ]
@@ -1275,7 +1275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
